--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     //recyclerview
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
+    // ViewModel, LiveData, Lifecycle
+    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
